Fix td overflow bug

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -38,7 +38,7 @@ td {
   align-items: center;
   width: 200px;
   margin: 5px;
-  overflow: auto;
+  overflow: inherit;
 }
 
 li {
